--- a/default.conf
+++ b/default.conf
@@ -1,16 +1,14 @@
 server {
     listen       8080;
-    server_name  localhost;
+    server_name  www.f5.com;
 
-    resolver 8.8.8.8;
-
-    # location / {
-    #    root   /usr/share/nginx/html;
-    #    index  index.html index.htm;
-    # }
+    resolver 8.8.8.8 valid=30s ipv6=off;
 
     location / {
-        proxy_pass https://www.f5.com;
+        proxy_ssl_server_name on;
+        proxy_set_header Host www.f5.com;
+        set $destination https://www.f5.com;
+        proxy_pass $destination;
     }
 
     error_page   500 502 503 504  /50x.html;
